# RAG-basic-AI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/extracted/: anexo.txt
data/processed/: anexo.txt
data/processed_chunks/anexo/: anexo_chunk_0.txt  anexo_chunk_1.txt  anexo_chunk_10.txt  anexo_chunk_11.txt  anexo_chunk_12.txt  anexo_chunk_13.txt  anexo_chunk_14.txt  anexo_chunk_15.txt  anexo_chunk_16.txt  anexo_chunk_17.txt  anexo_chunk_18.txt  anexo_chunk_19.txt  anexo_chunk_2.txt  anexo_chunk_20.txt  anexo_chunk_21.txt  anexo_chunk_22.txt  anexo_chunk_23.txt  anexo_chunk_24.txt  anexo_chunk_25.txt  anexo_chunk_26.txt  anexo_chunk_27.txt  anexo_chunk_3.txt  anexo_chunk_4.txt  anexo_chunk_5.txt  anexo_chunk_6.txt  anexo_chunk_7.txt  anexo_chunk_8.txt  anexo_chunk_9.txt
docs/: README.md  rag_evaluation.csv
src/: automate_metrics_evaluation.py  bm25_query.py  bm25_retriever.py  contextual_generation.py  conversation_manager.py  data_preparation.py  dense_query.py  dense_retriever.py  document_loader.py  evaluation.py  rag_generator.py  rag_generator_dense.py  tfidf_query.py  tfidf_retriever.py
tests/: test_bm25_retriever.py  test_dense_retriever.py  test_tfidf_retriever.py
